[package]
name = "dumptruckrss"
version = "0.1.0"
authors = ["Luís Fiolhais <luis.azenhas.fiolhais@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "1.9.0", features = [ "from_url" ] }
clap = "2.33.1"
reqwest = { version = "0.10.6", features = [ "stream" ] }
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "~0.3.0", features = ["compat"] }
futures = "0.3"
fs2 = "0.4.3"
env_logger = "0.7.1"
log = "0.4.0"
pbr = "1.0.3"
chrono = "0.4.12"
rayon = "1.3.1"
