[package]
name = "dumptruckrss"
version = "0.1.0"
authors = ["Luís Fiolhais <luis.azenhas.fiolhais@tecnico.ulisboa.pt>"]
edition = "2018"
license = "GPL-3"
readme = "README.md"
description = "Dump your favorite RSS feeds into your hard drive."
repository = "https://github.com/lfiolhais/dumptruckrss"
keywords = [
	"rss",
	"cli",
	"dump",
]
categories = ["command-line-interface", "rss", "backup"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.10.0"
clap = "2.33.3"
reqwest = { version = "0.11.4", features = [ "stream" ] }
tokio = { version = "1.2.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["compat"] }
futures = "0.3.17"
fs2 = "0.4.3"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
rayon = "1.5.1"
indicatif = "0.16.2"

